<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conectado">

    <Button
        android:id="@+id/btn_hablar"
        android:layout_width="246dp"
        android:layout_height="86dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#D6D7D7"
        android:text="@string/Con_hablar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latrun" />

    <Button
        android:id="@+id/btn_coger"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#D6D7D7"
        android:onClick="Coger"
        android:text="@string/Con_coger"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/Con_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_colgar"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#D6D7D7"
        android:onClick="Colgar"
        android:text="@string/Con_colgar"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_coger" />

    <Button
        android:id="@+id/btn_abrir"
        android:layout_width="171dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#D6D7D7"
        android:onClick="Abrir"
        android:text="@string/Con_abrir"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_colgar" />

    <Button
        android:id="@+id/btn_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:onClick="cerrar"
        android:text="@string/Con_cerrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_abrir" />

    <ImageView
        android:id="@+id/latrun"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="61dp"
        android:layout_marginRight="61dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/btn_cerrar"
        app:layout_constraintTop_toBottomOf="@+id/btn_abrir"
        app:srcCompat="@drawable/latido_4" />

</androidx.constraintlayout.widget.ConstraintLayout>